exports[`invalid(1): {\"types\": \"./index.d.ts\", \"exports\": \"./index.js\"} 1`] = `

[Input]
  1 | {"types": "./index.d.ts", "exports": "./index.js"}

`;

exports[`invalid(1): {\"types\": \"./index.d.ts\", \"exports\": \"./index.js\"} 2`] = `

Message:
> 1 | {"types": "./index.d.ts", "exports": "./index.js"}
    |                                      ^^^^^^^^^^^^ Exported JavaScript target \`./index.js\` has no corresponding \`types\` condition.

`;

exports[`invalid(10): {\"exports\": {\"types@v5\": \"./index.d.ts\", \"default\": \"./index.js\"}} 1`] = `

[Input]
  1 | {"exports": {"types@v5": "./index.d.ts", "default": "./index.js"}}

`;

exports[`invalid(10): {\"exports\": {\"types@v5\": \"./index.d.ts\", \"default\": \"./index.js\"}} 2`] = `

Message:
> 1 | {"exports": {"types@v5": "./index.d.ts", "default": "./index.js"}}
    |              ^^^^^^^^^^ Versioned type condition \`types@v5\` must use TypeScript-compatible semver syntax.

`;

exports[`invalid(10): {\"exports\": {\"types@v5\": \"./index.d.ts\", \"default\": \"./index.js\"}} 3`] = `

Message:
> 1 | {"exports": {"types@v5": "./index.d.ts", "default": "./index.js"}}
    |                                                     ^^^^^^^^^^^^ Exported JavaScript target \`./index.js\` has no corresponding \`types\` condition.

`;

exports[`invalid(11): {\"exports\": {\"types@>= 5\": \"./index.d.ts\", \"default\": \"./index.js\"}} 1`] = `

[Input]
  1 | {"exports": {"types@>= 5": "./index.d.ts", "default": "./index.js"}}

`;

exports[`invalid(11): {\"exports\": {\"types@>= 5\": \"./index.d.ts\", \"default\": \"./index.js\"}} 2`] = `

Message:
> 1 | {"exports": {"types@>= 5": "./index.d.ts", "default": "./index.js"}}
    |              ^^^^^^^^^^^^ Versioned type condition \`types@>= 5\` must use TypeScript-compatible semver syntax.

`;

exports[`invalid(11): {\"exports\": {\"types@>= 5\": \"./index.d.ts\", \"default\": \"./index.js\"}} 3`] = `

Message:
> 1 | {"exports": {"types@>= 5": "./index.d.ts", "default": "./index.js"}}
    |                                                       ^^^^^^^^^^^^ Exported JavaScript target \`./index.js\` has no corresponding \`types\` condition.

`;

exports[`invalid(12): {\"exports\": {\"types@1.0.0-K\": \"./index.d.ts\", \"default\": \"./index.js\"}} 1`] = `

[Input]
  1 | {"exports": {"types@1.0.0-K": "./index.d.ts", "default": "./index.js"}}

`;

exports[`invalid(12): {\"exports\": {\"types@1.0.0-K\": \"./index.d.ts\", \"default\": \"./index.js\"}} 2`] = `

Message:
> 1 | {"exports": {"types@1.0.0-K": "./index.d.ts", "default": "./index.js"}}
    |              ^^^^^^^^^^^^^^^ Versioned type condition \`types@1.0.0-K\` must use TypeScript-compatible semver syntax.

`;

exports[`invalid(12): {\"exports\": {\"types@1.0.0-K\": \"./index.d.ts\", \"default\": \"./index.js\"}} 3`] = `

Message:
> 1 | {"exports": {"types@1.0.0-K": "./index.d.ts", "default": "./index.js"}}
    |                                                          ^^^^^^^^^^^^ Exported JavaScript target \`./index.js\` has no corresponding \`types\` condition.

`;

exports[`invalid(13): {\"exports\": {\"types@1.0.0-01\": \"./index.d.ts\", \"default\": \"./index.js\"}} 1`] = `

[Input]
  1 | {"exports": {"types@1.0.0-01": "./index.d.ts", "default": "./index.js"}}

`;

exports[`invalid(13): {\"exports\": {\"types@1.0.0-01\": \"./index.d.ts\", \"default\": \"./index.js\"}} 2`] = `

Message:
> 1 | {"exports": {"types@1.0.0-01": "./index.d.ts", "default": "./index.js"}}
    |              ^^^^^^^^^^^^^^^^ Versioned type condition \`types@1.0.0-01\` must use TypeScript-compatible semver syntax.

`;

exports[`invalid(13): {\"exports\": {\"types@1.0.0-01\": \"./index.d.ts\", \"default\": \"./index.js\"}} 3`] = `

Message:
> 1 | {"exports": {"types@1.0.0-01": "./index.d.ts", "default": "./index.js"}}
    |                                                           ^^^^^^^^^^^^ Exported JavaScript target \`./index.js\` has no corresponding \`types\` condition.

`;

exports[`invalid(14): {\"exports\": {\"types@1.0.0-a..b\": \"./index.d.ts\", \"default\": \"./index.js\"}} 1`] = `

[Input]
  1 | {"exports": {"types@1.0.0-a..b": "./index.d.ts", "default": "./index.js"}}

`;

exports[`invalid(14): {\"exports\": {\"types@1.0.0-a..b\": \"./index.d.ts\", \"default\": \"./index.js\"}} 2`] = `

Message:
> 1 | {"exports": {"types@1.0.0-a..b": "./index.d.ts", "default": "./index.js"}}
    |              ^^^^^^^^^^^^^^^^^^ Versioned type condition \`types@1.0.0-a..b\` must use TypeScript-compatible semver syntax.

`;

exports[`invalid(14): {\"exports\": {\"types@1.0.0-a..b\": \"./index.d.ts\", \"default\": \"./index.js\"}} 3`] = `

Message:
> 1 | {"exports": {"types@1.0.0-a..b": "./index.d.ts", "default": "./index.js"}}
    |                                                             ^^^^^^^^^^^^ Exported JavaScript target \`./index.js\` has no corresponding \`types\` condition.

`;

exports[`invalid(15): {\"exports\": {\"types@1.0.0+foo..bar\": \"./index.d.ts\", \"default\": \"./index.js\"}} 1`] = `

[Input]
  1 | {"exports": {"types@1.0.0+foo..bar": "./index.d.ts", "default": "./index.js"}}

`;

exports[`invalid(15): {\"exports\": {\"types@1.0.0+foo..bar\": \"./index.d.ts\", \"default\": \"./index.js\"}} 2`] = `

Message:
> 1 | {"exports": {"types@1.0.0+foo..bar": "./index.d.ts", "default": "./index.js"}}
    |              ^^^^^^^^^^^^^^^^^^^^^^ Versioned type condition \`types@1.0.0+foo..bar\` must use TypeScript-compatible semver syntax.

`;

exports[`invalid(15): {\"exports\": {\"types@1.0.0+foo..bar\": \"./index.d.ts\", \"default\": \"./index.js\"}} 3`] = `

Message:
> 1 | {"exports": {"types@1.0.0+foo..bar": "./index.d.ts", "default": "./index.js"}}
    |                                                                 ^^^^^^^^^^^^ Exported JavaScript target \`./index.js\` has no corresponding \`types\` condition.

`;

exports[`invalid(16): {\"exports\": {\"types@1 - abc\": \"./index.d.ts\", \"default\": \"./index.js\"}} 1`] = `

[Input]
  1 | {"exports": {"types@1 - abc": "./index.d.ts", "default": "./index.js"}}

`;

exports[`invalid(16): {\"exports\": {\"types@1 - abc\": \"./index.d.ts\", \"default\": \"./index.js\"}} 2`] = `

Message:
> 1 | {"exports": {"types@1 - abc": "./index.d.ts", "default": "./index.js"}}
    |              ^^^^^^^^^^^^^^^ Versioned type condition \`types@1 - abc\` must use TypeScript-compatible semver syntax.

`;

exports[`invalid(16): {\"exports\": {\"types@1 - abc\": \"./index.d.ts\", \"default\": \"./index.js\"}} 3`] = `

Message:
> 1 | {"exports": {"types@1 - abc": "./index.d.ts", "default": "./index.js"}}
    |                                                          ^^^^^^^^^^^^ Exported JavaScript target \`./index.js\` has no corresponding \`types\` condition.

`;

exports[`invalid(17): {\"exports\": {\"types\": {\"types@v5\": \"./index.d.ts\"}, \"default\": \"./index.js\"}} 1`] = `

[Input]
  1 | {"exports": {"types": {"types@v5": "./index.d.ts"}, "default": "./index.js"}}

`;

exports[`invalid(17): {\"exports\": {\"types\": {\"types@v5\": \"./index.d.ts\"}, \"default\": \"./index.js\"}} 2`] = `

Message:
> 1 | {"exports": {"types": {"types@v5": "./index.d.ts"}, "default": "./index.js"}}
    |                        ^^^^^^^^^^ Versioned type condition \`types@v5\` must use TypeScript-compatible semver syntax.

`;

exports[`invalid(17): {\"exports\": {\"types\": {\"types@v5\": \"./index.d.ts\"}, \"default\": \"./index.js\"}} 3`] = `

Message:
> 1 | {"exports": {"types": {"types@v5": "./index.d.ts"}, "default": "./index.js"}}
    |                                                                ^^^^^^^^^^^^ Exported JavaScript target \`./index.js\` has no corresponding \`types\` condition.

`;

exports[`invalid(18): {\"exports\": {\"types\": \"./index.js\", \"default\": \"./index.js\"}} 1`] = `

[Input]
  1 | {"exports": {"types": "./index.js", "default": "./index.js"}}

`;

exports[`invalid(18): {\"exports\": {\"types\": \"./index.js\", \"default\": \"./index.js\"}} 2`] = `

Message:
> 1 | {"exports": {"types": "./index.js", "default": "./index.js"}}
    |                       ^^^^^^^^^^^^ The \`types\` condition \`./index.js\` must point at a declaration file ending in \`.d.ts\`, \`.d.mts\`, or \`.d.cts\`.

`;

exports[`invalid(18): {\"exports\": {\"types\": \"./index.js\", \"default\": \"./index.js\"}} 3`] = `

Message:
> 1 | {"exports": {"types": "./index.js", "default": "./index.js"}}
    |                                                ^^^^^^^^^^^^ Exported JavaScript target \`./index.js\` has no corresponding \`types\` condition.

`;

exports[`invalid(19): {\"exports\": {\"types\": \"./index.ts\", \"default\": \"./index.mjs\"}} 1`] = `

[Input]
  1 | {"exports": {"types": "./index.ts", "default": "./index.mjs"}}

`;

exports[`invalid(19): {\"exports\": {\"types\": \"./index.ts\", \"default\": \"./index.mjs\"}} 2`] = `

Message:
> 1 | {"exports": {"types": "./index.ts", "default": "./index.mjs"}}
    |                       ^^^^^^^^^^^^ The \`types\` condition \`./index.ts\` must point at a declaration file ending in \`.d.ts\`, \`.d.mts\`, or \`.d.cts\`.

`;

exports[`invalid(2): {\"types\": \"./index.d.ts\", \"exports\": {\".\": \"./index.js\"}} 1`] = `

[Input]
  1 | {"types": "./index.d.ts", "exports": {".": "./index.js"}}

`;

exports[`invalid(2): {\"types\": \"./index.d.ts\", \"exports\": {\".\": \"./index.js\"}} 2`] = `

Message:
> 1 | {"types": "./index.d.ts", "exports": {".": "./index.js"}}
    |                                            ^^^^^^^^^^^^ Exported JavaScript target \`./index.js\` has no corresponding \`types\` condition.

`;

exports[`invalid(20): {\"exports\": {\"types\": \"./index.D.TS\", \"default\": \"./index.js\"}} 1`] = `

[Input]
  1 | {"exports": {"types": "./index.D.TS", "default": "./index.js"}}

`;

exports[`invalid(20): {\"exports\": {\"types\": \"./index.D.TS\", \"default\": \"./index.js\"}} 2`] = `

Message:
> 1 | {"exports": {"types": "./index.D.TS", "default": "./index.js"}}
    |                       ^^^^^^^^^^^^^^ The \`types\` condition \`./index.D.TS\` must point at a declaration file ending in \`.d.ts\`, \`.d.mts\`, or \`.d.cts\`.

`;

exports[`invalid(20): {\"exports\": {\"types\": \"./index.D.TS\", \"default\": \"./index.js\"}} 3`] = `

Message:
> 1 | {"exports": {"types": "./index.D.TS", "default": "./index.js"}}
    |                                                  ^^^^^^^^^^^^ Exported JavaScript target \`./index.js\` has no corresponding \`types\` condition.

`;

exports[`invalid(21): {\"exports\": {\"types\": null, \"default\": \"./index.js\"}} 1`] = `

[Input]
  1 | {"exports": {"types": null, "default": "./index.js"}}

`;

exports[`invalid(21): {\"exports\": {\"types\": null, \"default\": \"./index.js\"}} 2`] = `

Message:
> 1 | {"exports": {"types": null, "default": "./index.js"}}
    |                       ^^^^ The \`types\` condition must point to a declaration file.

`;

exports[`invalid(21): {\"exports\": {\"types\": null, \"default\": \"./index.js\"}} 3`] = `

Message:
> 1 | {"exports": {"types": null, "default": "./index.js"}}
    |                                        ^^^^^^^^^^^^ Exported JavaScript target \`./index.js\` has no corresponding \`types\` condition.

`;

exports[`invalid(22): {\"exports\": {\"types\": true, \"default\": \"./index.js\"}} 1`] = `

[Input]
  1 | {"exports": {"types": true, "default": "./index.js"}}

`;

exports[`invalid(22): {\"exports\": {\"types\": true, \"default\": \"./index.js\"}} 2`] = `

Message:
> 1 | {"exports": {"types": true, "default": "./index.js"}}
    |                                        ^^^^^^^^^^^^ Exported JavaScript target \`./index.js\` has no corresponding \`types\` condition.

`;

exports[`invalid(23): {\"exports\": {\"types\": false, \"default\": \"./index.js\"}} 1`] = `

[Input]
  1 | {"exports": {"types": false, "default": "./index.js"}}

`;

exports[`invalid(23): {\"exports\": {\"types\": false, \"default\": \"./index.js\"}} 2`] = `

Message:
> 1 | {"exports": {"types": false, "default": "./index.js"}}
    |                                         ^^^^^^^^^^^^ Exported JavaScript target \`./index.js\` has no corresponding \`types\` condition.

`;

exports[`invalid(24): {\"exports\": {\"types\": \"\", \"default\": \"./index.js\"}} 1`] = `

[Input]
  1 | {"exports": {"types": "", "default": "./index.js"}}

`;

exports[`invalid(24): {\"exports\": {\"types\": \"\", \"default\": \"./index.js\"}} 2`] = `

Message:
> 1 | {"exports": {"types": "", "default": "./index.js"}}
    |                                      ^^^^^^^^^^^^ Exported JavaScript target \`./index.js\` has no corresponding \`types\` condition.

`;

exports[`invalid(25): {\"exports\": {\"types\": {\"import\": \"./index.d.ts\", \"browser\": \"./not-a-declaration.js\"}, \"import\": \"./index.js\"}} 1`] = `

[Input]
  1 | {"exports": {"types": {"import": "./index.d.ts", "browser": "./not-a-declaration.js"}, "import": "./index.js"}}

`;

exports[`invalid(25): {\"exports\": {\"types\": {\"import\": \"./index.d.ts\", \"browser\": \"./not-a-declaration.js\"}, \"import\": \"./index.js\"}} 2`] = `

Message:
> 1 | {"exports": {"types": {"import": "./index.d.ts", "browser": "./not-a-declaration.js"}, "import": "./index.js"}}
    |                                                             ^^^^^^^^^^^^^^^^^^^^^^^^ The \`types\` condition \`./not-a-declaration.js\` must point at a declaration file ending in \`.d.ts\`, \`.d.mts\`, or \`.d.cts\`.

`;

exports[`invalid(26): {\"exports\": {\"types\": {\"default\": \"./legacy.d.ts\", \"types@>=5\": \"./modern.d.ts\"}, \"default\": \"./index.js\"}} 1`] = `

[Input]
  1 | {"exports": {"types": {"default": "./legacy.d.ts", "types@>=5": "./modern.d.ts"}, "default": "./index.js"}}

`;

exports[`invalid(26): {\"exports\": {\"types\": {\"default\": \"./legacy.d.ts\", \"types@>=5\": \"./modern.d.ts\"}, \"default\": \"./index.js\"}} 2`] = `

Message:
> 1 | {"exports": {"types": {"default": "./legacy.d.ts", "types@>=5": "./modern.d.ts"}, "default": "./index.js"}}
    |                                                    ^^^^^^^^^^^ Versioned type conditions must come before \`types\`, and type conditions must come before a \`default\` target and before an \`import\` or \`node\` target.

`;

exports[`invalid(27): {\"exports\": {\"types\": {\"types\": null, \"default\": \"./fallback.d.ts\"}, \"default\": \"./index.js\"}} 1`] = `

[Input]
  1 | {"exports": {"types": {"types": null, "default": "./fallback.d.ts"}, "default": "./index.js"}}

`;

exports[`invalid(27): {\"exports\": {\"types\": {\"types\": null, \"default\": \"./fallback.d.ts\"}, \"default\": \"./index.js\"}} 2`] = `

Message:
> 1 | {"exports": {"types": {"types": null, "default": "./fallback.d.ts"}, "default": "./index.js"}}
    |                                 ^^^^ The \`types\` condition must point to a declaration file.

`;

exports[`invalid(27): {\"exports\": {\"types\": {\"types\": null, \"default\": \"./fallback.d.ts\"}, \"default\": \"./index.js\"}} 3`] = `

Message:
> 1 | {"exports": {"types": {"types": null, "default": "./fallback.d.ts"}, "default": "./index.js"}}
    |                                                                                 ^^^^^^^^^^^^ Exported JavaScript target \`./index.js\` has no corresponding \`types\` condition.

`;

exports[`invalid(28): {\"exports\": {\"types\": [null, \"./index.d.ts\"], \"default\": [\"./index.js\", \"./fallback.js\"]}} 1`] = `

[Input]
  1 | {"exports": {"types": [null, "./index.d.ts"], "default": ["./index.js", "./fallback.js"]}}

`;

exports[`invalid(28): {\"exports\": {\"types\": [null, \"./index.d.ts\"], \"default\": [\"./index.js\", \"./fallback.js\"]}} 2`] = `

Message:
> 1 | {"exports": {"types": [null, "./index.d.ts"], "default": ["./index.js", "./fallback.js"]}}
    |                       ^^^^^^^^^^^^^^^^^^^^^^ The \`types\` condition must point to a declaration file.

`;

exports[`invalid(28): {\"exports\": {\"types\": [null, \"./index.d.ts\"], \"default\": [\"./index.js\", \"./fallback.js\"]}} 3`] = `

Message:
> 1 | {"exports": {"types": [null, "./index.d.ts"], "default": ["./index.js", "./fallback.js"]}}
    |                                                           ^^^^^^^^^^^^ Exported JavaScript target \`./index.js\` has no corresponding \`types\` condition.

`;

exports[`invalid(29): {\"exports\": {\"types\": {\"import\": [null, \"./index.d.ts\"], \"default\": \"./fallback.d.ts\"}, \"import\": \"./index.js\"}} 1`] = `

[Input]
  1 | {"exports": {"types": {"import": [null, "./index.d.ts"], "default": "./fallback.d.ts"}, "import": "./index.js"}}

`;

exports[`invalid(29): {\"exports\": {\"types\": {\"import\": [null, \"./index.d.ts\"], \"default\": \"./fallback.d.ts\"}, \"import\": \"./index.js\"}} 2`] = `

Message:
> 1 | {"exports": {"types": {"import": [null, "./index.d.ts"], "default": "./fallback.d.ts"}, "import": "./index.js"}}
    |                                                                                                   ^^^^^^^^^^^^ Exported JavaScript target \`./index.js\` has no corresponding \`types\` condition.

`;

exports[`invalid(3): {\"typings\": \"./index.d.ts\", \"exports\": {\".\": \"./index.js\", \"./sub\": \"./sub.js\"}} 1`] = `

[Input]
  1 | {"typings": "./index.d.ts", "exports": {".": "./index.js", "./sub": "./sub.js"}}

`;

exports[`invalid(3): {\"typings\": \"./index.d.ts\", \"exports\": {\".\": \"./index.js\", \"./sub\": \"./sub.js\"}} 2`] = `

Message:
> 1 | {"typings": "./index.d.ts", "exports": {".": "./index.js", "./sub": "./sub.js"}}
    |                                              ^^^^^^^^^^^^ Exported JavaScript target \`./index.js\` has no corresponding \`types\` condition.

`;

exports[`invalid(3): {\"typings\": \"./index.d.ts\", \"exports\": {\".\": \"./index.js\", \"./sub\": \"./sub.js\"}} 3`] = `

Message:
> 1 | {"typings": "./index.d.ts", "exports": {".": "./index.js", "./sub": "./sub.js"}}
    |                                                                     ^^^^^^^^^^ Exported JavaScript target \`./sub.js\` has no corresponding \`types\` condition.

`;

exports[`invalid(30): {\"exports\": {\"types\": {\"import\": {\"default\": null}, \"default\": \"./fallback.d.ts\"}, \"import\": \"./index.js\"}} 1`] = `

[Input]
  1 | {"exports": {"types": {"import": {"default": null}, "default": "./fallback.d.ts"}, "import": "./index.js"}}

`;

exports[`invalid(30): {\"exports\": {\"types\": {\"import\": {\"default\": null}, \"default\": \"./fallback.d.ts\"}, \"import\": \"./index.js\"}} 2`] = `

Message:
> 1 | {"exports": {"types": {"import": {"default": null}, "default": "./fallback.d.ts"}, "import": "./index.js"}}
    |                                                                                              ^^^^^^^^^^^^ Exported JavaScript target \`./index.js\` has no corresponding \`types\` condition.

`;

exports[`invalid(31): {\"exports\": {\"types\": {\"import\": {\"browser\": \"./browser.d.ts\", \"default\": null}, \"default\": \"./fallback.d.ts\"}, \"import\": {\"node\": \"./index.js\"}}} 1`] = `

[Input]
  1 | {"exports": {"types": {"import": {"browser": "./browser.d.ts", "default": null}, "default": "./fallback.d.ts"}, "import": {"node": "./index.js"}}}

`;

exports[`invalid(31): {\"exports\": {\"types\": {\"import\": {\"browser\": \"./browser.d.ts\", \"default\": null}, \"default\": \"./fallback.d.ts\"}, \"import\": {\"node\": \"./index.js\"}}} 2`] = `

Message:
> 1 | {"exports": {"types": {"import": {"browser": "./browser.d.ts", "default": null}, "default": "./fallback.d.ts"}, "import": {"node": "./index.js"}}}
    |                                                                                                                                    ^^^^^^^^^^^^ Exported JavaScript target \`./index.js\` has no corresponding \`types\` condition.

`;

exports[`invalid(32): {\"exports\": {\"types\": {\"import\": {\"browser\": \"./browser.d.ts\", \"default\": null}, \"default\": \"./fallback.d.ts\"}, \"import\": \"./index.js\"}} 1`] = `

[Input]
  1 | {"exports": {"types": {"import": {"browser": "./browser.d.ts", "default": null}, "default": "./fallback.d.ts"}, "import": "./index.js"}}

`;

exports[`invalid(32): {\"exports\": {\"types\": {\"import\": {\"browser\": \"./browser.d.ts\", \"default\": null}, \"default\": \"./fallback.d.ts\"}, \"import\": \"./index.js\"}} 2`] = `

Message:
> 1 | {"exports": {"types": {"import": {"browser": "./browser.d.ts", "default": null}, "default": "./fallback.d.ts"}, "import": "./index.js"}}
    |                                                                                                                           ^^^^^^^^^^^^ Exported JavaScript target \`./index.js\` has no corresponding \`types\` condition.

`;

exports[`invalid(33): {\"exports\": {\"types\": {\"import\": {\"node\": null}, \"default\": \"./fallback.d.ts\"}, \"import\": {\"node\": \"./index.js\"}}} 1`] = `

[Input]
  1 | {"exports": {"types": {"import": {"node": null}, "default": "./fallback.d.ts"}, "import": {"node": "./index.js"}}}

`;

exports[`invalid(33): {\"exports\": {\"types\": {\"import\": {\"node\": null}, \"default\": \"./fallback.d.ts\"}, \"import\": {\"node\": \"./index.js\"}}} 2`] = `

Message:
> 1 | {"exports": {"types": {"import": {"node": null}, "default": "./fallback.d.ts"}, "import": {"node": "./index.js"}}}
    |                                                                                                    ^^^^^^^^^^^^ Exported JavaScript target \`./index.js\` has no corresponding \`types\` condition.

`;

exports[`invalid(34): {\"exports\": {\".\": {\"types\": \"./index.d.ts\", \"default\": \"./index.js\"}, \"./feature\": \"./feature.js\"}} 1`] = `

[Input]
  1 | {"exports": {".": {"types": "./index.d.ts", "default": "./index.js"}, "./feature": "./feature.js"}}

`;

exports[`invalid(34): {\"exports\": {\".\": {\"types\": \"./index.d.ts\", \"default\": \"./index.js\"}, \"./feature\": \"./feature.js\"}} 2`] = `

Message:
> 1 | {"exports": {".": {"types": "./index.d.ts", "default": "./index.js"}, "./feature": "./feature.js"}}
    |                                                                                    ^^^^^^^^^^^^^^ Exported JavaScript target \`./feature.js\` has no corresponding \`types\` condition.

`;

exports[`invalid(35): {\"type\": \"module\", \"exports\": {\"types\": {\"types@>=5\": [], \"types\": {\"import\": \"./import.d.mts\", \"require\": \"./require.d.cts\"}}, \"import\": \"./import.mjs\", \"require\": \"./require.cjs\"}} 1`] = `

[Input]
  1 | {"type": "module", "exports": {"types": {"types@>=5": [], "types": {"import": "./import.d.mts", "require": "./require.d.cts"}}, "import": "./import.mjs", "require": "./require.cjs"}}

`;

exports[`invalid(35): {\"type\": \"module\", \"exports\": {\"types\": {\"types@>=5\": [], \"types\": {\"import\": \"./import.d.mts\", \"require\": \"./require.d.cts\"}}, \"import\": \"./import.mjs\", \"require\": \"./require.cjs\"}} 2`] = `

Message:
> 1 | {"type": "module", "exports": {"types": {"types@>=5": [], "types": {"import": "./import.d.mts", "require": "./require.d.cts"}}, "import": "./import.mjs", "require": "./require.cjs"}}
    |                                                       ^^ The \`types\` condition must point to a declaration file.

`;

exports[`invalid(36): {\"exports\": {\"types\": {\"import\": {\"node\": \"./node.d.ts\"}}, \"import\": {\"node\": \"./node.js\", \"default\": \"./other.js\"}}} 1`] = `

[Input]
  1 | {"exports": {"types": {"import": {"node": "./node.d.ts"}}, "import": {"node": "./node.js", "default": "./other.js"}}}

`;

exports[`invalid(36): {\"exports\": {\"types\": {\"import\": {\"node\": \"./node.d.ts\"}}, \"import\": {\"node\": \"./node.js\", \"default\": \"./other.js\"}}} 2`] = `

Message:
> 1 | {"exports": {"types": {"import": {"node": "./node.d.ts"}}, "import": {"node": "./node.js", "default": "./other.js"}}}
    |                                                                                                       ^^^^^^^^^^^^ Exported JavaScript target \`./other.js\` has no corresponding \`types\` condition.

`;

exports[`invalid(37): {\"exports\": {\"types@>=5\": {\"import\": {\"node\": \"./node.d.ts\"}}, \"import\": {\"node\": \"./node.js\", \"default\": \"./other.js\"}}} 1`] = `

[Input]
  1 | {"exports": {"types@>=5": {"import": {"node": "./node.d.ts"}}, "import": {"node": "./node.js", "default": "./other.js"}}}

`;

exports[`invalid(37): {\"exports\": {\"types@>=5\": {\"import\": {\"node\": \"./node.d.ts\"}}, \"import\": {\"node\": \"./node.js\", \"default\": \"./other.js\"}}} 2`] = `

Message:
> 1 | {"exports": {"types@>=5": {"import": {"node": "./node.d.ts"}}, "import": {"node": "./node.js", "default": "./other.js"}}}
    |                                                                                                           ^^^^^^^^^^^^ Exported JavaScript target \`./other.js\` has no corresponding \`types\` condition.

`;

exports[`invalid(38): {\"exports\": {\"types@>=5 ||   || <4\": \"./index.d.ts\", \"default\": \"./index.js\"}} 1`] = `

[Input]
  1 | {"exports": {"types@>=5 ||   || <4": "./index.d.ts", "default": "./index.js"}}

`;

exports[`invalid(38): {\"exports\": {\"types@>=5 ||   || <4\": \"./index.d.ts\", \"default\": \"./index.js\"}} 2`] = `

Message:
> 1 | {"exports": {"types@>=5 ||   || <4": "./index.d.ts", "default": "./index.js"}}
    |              ^^^^^^^^^^^^^^^^^^^^^^ Versioned type condition \`types@>=5 ||   || <4\` must use TypeScript-compatible semver syntax.

`;

exports[`invalid(38): {\"exports\": {\"types@>=5 ||   || <4\": \"./index.d.ts\", \"default\": \"./index.js\"}} 3`] = `

Message:
> 1 | {"exports": {"types@>=5 ||   || <4": "./index.d.ts", "default": "./index.js"}}
    |                                                                 ^^^^^^^^^^^^ Exported JavaScript target \`./index.js\` has no corresponding \`types\` condition.

`;

exports[`invalid(39): {\"exports\": {\"types\": \"./fallback.d.ts\", \"types@>=5\": \"./modern.d.ts\", \"default\": \"./index.js\"}} 1`] = `

[Input]
  1 | {"exports": {"types": "./fallback.d.ts", "types@>=5": "./modern.d.ts", "default": "./index.js"}}

`;

exports[`invalid(39): {\"exports\": {\"types\": \"./fallback.d.ts\", \"types@>=5\": \"./modern.d.ts\", \"default\": \"./index.js\"}} 2`] = `

Message:
> 1 | {"exports": {"types": "./fallback.d.ts", "types@>=5": "./modern.d.ts", "default": "./index.js"}}
    |                                          ^^^^^^^^^^^ Versioned type conditions must come before \`types\`, and type conditions must come before a \`default\` target and before an \`import\` or \`node\` target.

`;

exports[`invalid(4): {\"typings\": \"./index.d.ts\", \"exports\": {\".\": \"./index.js\"}} 1`] = `

[Input]
  1 | {"typings": "./index.d.ts", "exports": {".": "./index.js"}}

`;

exports[`invalid(4): {\"typings\": \"./index.d.ts\", \"exports\": {\".\": \"./index.js\"}} 2`] = `

Message:
> 1 | {"typings": "./index.d.ts", "exports": {".": "./index.js"}}
    |                                              ^^^^^^^^^^^^ Exported JavaScript target \`./index.js\` has no corresponding \`types\` condition.

`;

exports[`invalid(40): {\"type\": \"module\", \"exports\": {\"types@invalid\": \"./invalid.cjs\", \"types\": \"./index.d.mts\", \"default\": \"./index.mjs\"}} 1`] = `

[Input]
  1 | {"type": "module", "exports": {"types@invalid": "./invalid.cjs", "types": "./index.d.mts", "default": "./index.mjs"}}

`;

exports[`invalid(40): {\"type\": \"module\", \"exports\": {\"types@invalid\": \"./invalid.cjs\", \"types\": \"./index.d.mts\", \"default\": \"./index.mjs\"}} 2`] = `

Message:
> 1 | {"type": "module", "exports": {"types@invalid": "./invalid.cjs", "types": "./index.d.mts", "default": "./index.mjs"}}
    |                                ^^^^^^^^^^^^^^^ Versioned type condition \`types@invalid\` must use TypeScript-compatible semver syntax.

`;

exports[`invalid(41): {\"type\": \"module\", \"exports\": {\"types\": {\"import\": {\"types\": null}, \"default\": \"./fallback.d.cts\"}, \"import\": \"./index.js\"}} 1`] = `

[Input]
  1 | {"type": "module", "exports": {"types": {"import": {"types": null}, "default": "./fallback.d.cts"}, "import": "./index.js"}}

`;

exports[`invalid(41): {\"type\": \"module\", \"exports\": {\"types\": {\"import\": {\"types\": null}, \"default\": \"./fallback.d.cts\"}, \"import\": \"./index.js\"}} 2`] = `

Message:
> 1 | {"type": "module", "exports": {"types": {"import": {"types": null}, "default": "./fallback.d.cts"}, "import": "./index.js"}}
    |                                                              ^^^^ The \`types\` condition must point to a declaration file.

`;

exports[`invalid(41): {\"type\": \"module\", \"exports\": {\"types\": {\"import\": {\"types\": null}, \"default\": \"./fallback.d.cts\"}, \"import\": \"./index.js\"}} 3`] = `

Message:
> 1 | {"type": "module", "exports": {"types": {"import": {"types": null}, "default": "./fallback.d.cts"}, "import": "./index.js"}}
    |                                                                                                               ^^^^^^^^^^^^ Exported JavaScript target \`./index.js\` has no corresponding \`types\` condition.

`;

exports[`invalid(42): {\"type\": \"module\", \"exports\": {\"types\": {\"import\": {\"types\": [], \"default\": null}, \"default\": \"./fallback.d.cts\"}, \"import\": \"./index.js\"}} 1`] = `

[Input]
  1 | {"type": "module", "exports": {"types": {"import": {"types": [], "default": null}, "default": "./fallback.d.cts"}, "import": "./index.js"}}

`;

exports[`invalid(42): {\"type\": \"module\", \"exports\": {\"types\": {\"import\": {\"types\": [], \"default\": null}, \"default\": \"./fallback.d.cts\"}, \"import\": \"./index.js\"}} 2`] = `

Message:
> 1 | {"type": "module", "exports": {"types": {"import": {"types": [], "default": null}, "default": "./fallback.d.cts"}, "import": "./index.js"}}
    |                                                              ^^ The \`types\` condition must point to a declaration file.

`;

exports[`invalid(42): {\"type\": \"module\", \"exports\": {\"types\": {\"import\": {\"types\": [], \"default\": null}, \"default\": \"./fallback.d.cts\"}, \"import\": \"./index.js\"}} 3`] = `

Message:
> 1 | {"type": "module", "exports": {"types": {"import": {"types": [], "default": null}, "default": "./fallback.d.cts"}, "import": "./index.js"}}
    |                                                                                                                              ^^^^^^^^^^^^ Exported JavaScript target \`./index.js\` has no corresponding \`types\` condition.

`;

exports[`invalid(43): {\"type\": \"module\", \"exports\": {\"types@>=5\": {\"import\": null, \"require\": \"./r.d.cts\"}, \"types\": {\"import\": \"./i.d.mts\", \"require\": \"./r.d.cts\"}, \"import\": \"./i.mjs\", \"require\": \"./r.cjs\"}} 1`] = `

[Input]
  1 | {"type": "module", "exports": {"types@>=5": {"import": null, "require": "./r.d.cts"}, "types": {"import": "./i.d.mts", "require": "./r.d.cts"}, "import": "./i.mjs", "require": "./r.cjs"}}

`;

exports[`invalid(43): {\"type\": \"module\", \"exports\": {\"types@>=5\": {\"import\": null, \"require\": \"./r.d.cts\"}, \"types\": {\"import\": \"./i.d.mts\", \"require\": \"./r.d.cts\"}, \"import\": \"./i.mjs\", \"require\": \"./r.cjs\"}} 2`] = `

Message:
> 1 | {"type": "module", "exports": {"types@>=5": {"import": null, "require": "./r.d.cts"}, "types": {"import": "./i.d.mts", "require": "./r.d.cts"}, "import": "./i.mjs", "require": "./r.cjs"}}
    |                                                                                                                                                           ^^^^^^^^^ Exported JavaScript target \`./i.mjs\` has no corresponding \`types\` condition.

`;

exports[`invalid(44): {\"exports\": {\"types\": 1, \"default\": \"./index.js\"}} 1`] = `

[Input]
  1 | {"exports": {"types": 1, "default": "./index.js"}}

`;

exports[`invalid(44): {\"exports\": {\"types\": 1, \"default\": \"./index.js\"}} 2`] = `

Message:
> 1 | {"exports": {"types": 1, "default": "./index.js"}}
    |                                     ^^^^^^^^^^^^ Exported JavaScript target \`./index.js\` has no corresponding \`types\` condition.

`;

exports[`invalid(45): {\"type\": \"module\", \"exports\": {\"types\": {\"types\": null, \"default\": \"./fallback.d.cts\"}, \"default\": \"./index.mjs\"}} 1`] = `

[Input]
  1 | {"type": "module", "exports": {"types": {"types": null, "default": "./fallback.d.cts"}, "default": "./index.mjs"}}

`;

exports[`invalid(45): {\"type\": \"module\", \"exports\": {\"types\": {\"types\": null, \"default\": \"./fallback.d.cts\"}, \"default\": \"./index.mjs\"}} 2`] = `

Message:
> 1 | {"type": "module", "exports": {"types": {"types": null, "default": "./fallback.d.cts"}, "default": "./index.mjs"}}
    |                                                   ^^^^ The \`types\` condition must point to a declaration file.

`;

exports[`invalid(45): {\"type\": \"module\", \"exports\": {\"types\": {\"types\": null, \"default\": \"./fallback.d.cts\"}, \"default\": \"./index.mjs\"}} 3`] = `

Message:
> 1 | {"type": "module", "exports": {"types": {"types": null, "default": "./fallback.d.cts"}, "default": "./index.mjs"}}
    |                                                                                                    ^^^^^^^^^^^^^ Exported JavaScript target \`./index.mjs\` has no corresponding \`types\` condition.

`;

exports[`invalid(46): {\"exports\": {\".\": {\"types\": \"./a.d.ts\", \"types\": \"./a.js\", \"default\": \"./a.js\"}}} 1`] = `

[Input]
  1 | {"exports": {".": {"types": "./a.d.ts", "types": "./a.js", "default": "./a.js"}}}

`;

exports[`invalid(46): {\"exports\": {\".\": {\"types\": \"./a.d.ts\", \"types\": \"./a.js\", \"default\": \"./a.js\"}}} 2`] = `

Message:
> 1 | {"exports": {".": {"types": "./a.d.ts", "types": "./a.js", "default": "./a.js"}}}
    |                                                  ^^^^^^^^ The \`types\` condition \`./a.js\` must point at a declaration file ending in \`.d.ts\`, \`.d.mts\`, or \`.d.cts\`.

`;

exports[`invalid(46): {\"exports\": {\".\": {\"types\": \"./a.d.ts\", \"types\": \"./a.js\", \"default\": \"./a.js\"}}} 3`] = `

Message:
> 1 | {"exports": {".": {"types": "./a.d.ts", "types": "./a.js", "default": "./a.js"}}}
    |                                                                       ^^^^^^^^ Exported JavaScript target \`./a.js\` has no corresponding \`types\` condition.

`;

exports[`invalid(47): {\"exports\": {\"types\": {\"browser\": \"./index.d.ts\"}, \"default\": {\"import\": \"./index.mjs\"}}} 1`] = `

[Input]
  1 | {"exports": {"types": {"browser": "./index.d.ts"}, "default": {"import": "./index.mjs"}}}

`;

exports[`invalid(47): {\"exports\": {\"types\": {\"browser\": \"./index.d.ts\"}, \"default\": {\"import\": \"./index.mjs\"}}} 2`] = `

Message:
> 1 | {"exports": {"types": {"browser": "./index.d.ts"}, "default": {"import": "./index.mjs"}}}
    |                                                                          ^^^^^^^^^^^^^ Exported JavaScript target \`./index.mjs\` has no corresponding \`types\` condition.

`;

exports[`invalid(48): {\"exports\": {\"types\": {\"browser\": \"./index.d.ts\"}, \"default\": \"./index.mjs\"}} 1`] = `

[Input]
  1 | {"exports": {"types": {"browser": "./index.d.ts"}, "default": "./index.mjs"}}

`;

exports[`invalid(48): {\"exports\": {\"types\": {\"browser\": \"./index.d.ts\"}, \"default\": \"./index.mjs\"}} 2`] = `

Message:
> 1 | {"exports": {"types": {"browser": "./index.d.ts"}, "default": "./index.mjs"}}
    |                                                               ^^^^^^^^^^^^^ Exported JavaScript target \`./index.mjs\` has no corresponding \`types\` condition.

`;

exports[`invalid(49): {\"exports\": {\"types\": {\"module\": \"./index.d.ts\"}, \"default\": \"./index.mjs\"}} 1`] = `

[Input]
  1 | {"exports": {"types": {"module": "./index.d.ts"}, "default": "./index.mjs"}}

`;

exports[`invalid(49): {\"exports\": {\"types\": {\"module\": \"./index.d.ts\"}, \"default\": \"./index.mjs\"}} 2`] = `

Message:
> 1 | {"exports": {"types": {"module": "./index.d.ts"}, "default": "./index.mjs"}}
    |                                                              ^^^^^^^^^^^^^ Exported JavaScript target \`./index.mjs\` has no corresponding \`types\` condition.

`;

exports[`invalid(5): {\"exports\": {\"default\": \"./index.js\", \"types\": \"./index.d.ts\"}} 1`] = `

[Input]
  1 | {"exports": {"default": "./index.js", "types": "./index.d.ts"}}

`;

exports[`invalid(5): {\"exports\": {\"default\": \"./index.js\", \"types\": \"./index.d.ts\"}} 2`] = `

Message:
> 1 | {"exports": {"default": "./index.js", "types": "./index.d.ts"}}
    |                                       ^^^^^^^ Versioned type conditions must come before \`types\`, and type conditions must come before a \`default\` target and before an \`import\` or \`node\` target.

`;

exports[`invalid(50): {\"exports\": {\"types\": {\"worker\": \"./index.d.ts\"}, \"default\": \"./index.mjs\"}} 1`] = `

[Input]
  1 | {"exports": {"types": {"worker": "./index.d.ts"}, "default": "./index.mjs"}}

`;

exports[`invalid(50): {\"exports\": {\"types\": {\"worker\": \"./index.d.ts\"}, \"default\": \"./index.mjs\"}} 2`] = `

Message:
> 1 | {"exports": {"types": {"worker": "./index.d.ts"}, "default": "./index.mjs"}}
    |                                                              ^^^^^^^^^^^^^ Exported JavaScript target \`./index.mjs\` has no corresponding \`types\` condition.

`;

exports[`invalid(51): {\"exports\": {\"types\": {\"deno\": \"./index.d.ts\"}, \"default\": \"./index.mjs\"}} 1`] = `

[Input]
  1 | {"exports": {"types": {"deno": "./index.d.ts"}, "default": "./index.mjs"}}

`;

exports[`invalid(51): {\"exports\": {\"types\": {\"deno\": \"./index.d.ts\"}, \"default\": \"./index.mjs\"}} 2`] = `

Message:
> 1 | {"exports": {"types": {"deno": "./index.d.ts"}, "default": "./index.mjs"}}
    |                                                            ^^^^^^^^^^^^^ Exported JavaScript target \`./index.mjs\` has no corresponding \`types\` condition.

`;

exports[`invalid(52): {\"exports\": {\"types\": {\"module-sync\": \"./index.d.ts\"}, \"default\": \"./index.mjs\"}} 1`] = `

[Input]
  1 | {"exports": {"types": {"module-sync": "./index.d.ts"}, "default": "./index.mjs"}}

`;

exports[`invalid(52): {\"exports\": {\"types\": {\"module-sync\": \"./index.d.ts\"}, \"default\": \"./index.mjs\"}} 2`] = `

Message:
> 1 | {"exports": {"types": {"module-sync": "./index.d.ts"}, "default": "./index.mjs"}}
    |                                                                   ^^^^^^^^^^^^^ Exported JavaScript target \`./index.mjs\` has no corresponding \`types\` condition.

`;

exports[`invalid(53): {\"exports\": {\"types\": {\"node-addons\": \"./index.d.ts\"}, \"default\": \"./index.mjs\"}} 1`] = `

[Input]
  1 | {"exports": {"types": {"node-addons": "./index.d.ts"}, "default": "./index.mjs"}}

`;

exports[`invalid(53): {\"exports\": {\"types\": {\"node-addons\": \"./index.d.ts\"}, \"default\": \"./index.mjs\"}} 2`] = `

Message:
> 1 | {"exports": {"types": {"node-addons": "./index.d.ts"}, "default": "./index.mjs"}}
    |                                                                   ^^^^^^^^^^^^^ Exported JavaScript target \`./index.mjs\` has no corresponding \`types\` condition.

`;

exports[`invalid(54): {\"exports\": {\"types\": {\"import\": {\"browser\": \"./index.d.ts\"}}, \"default\": \"./index.mjs\"}} 1`] = `

[Input]
  1 | {"exports": {"types": {"import": {"browser": "./index.d.ts"}}, "default": "./index.mjs"}}

`;

exports[`invalid(54): {\"exports\": {\"types\": {\"import\": {\"browser\": \"./index.d.ts\"}}, \"default\": \"./index.mjs\"}} 2`] = `

Message:
> 1 | {"exports": {"types": {"import": {"browser": "./index.d.ts"}}, "default": "./index.mjs"}}
    |                                                                           ^^^^^^^^^^^^^ Exported JavaScript target \`./index.mjs\` has no corresponding \`types\` condition.

`;

exports[`invalid(55): {\"exports\": {\"types\": {\"types@>=5\": {\"browser\": \"./index.d.ts\"}}, \"default\": \"./index.mjs\"}} 1`] = `

[Input]
  1 | {"exports": {"types": {"types@>=5": {"browser": "./index.d.ts"}}, "default": "./index.mjs"}}

`;

exports[`invalid(55): {\"exports\": {\"types\": {\"types@>=5\": {\"browser\": \"./index.d.ts\"}}, \"default\": \"./index.mjs\"}} 2`] = `

Message:
> 1 | {"exports": {"types": {"types@>=5": {"browser": "./index.d.ts"}}, "default": "./index.mjs"}}
    |                                                                              ^^^^^^^^^^^^^ Exported JavaScript target \`./index.mjs\` has no corresponding \`types\` condition.

`;

exports[`invalid(56): {\"type\": \"module\", \"exports\": {\"types\": {\"import\": null, \"default\": \"./i.d.mts\"}, \"default\": \"./i.mjs\"}} 1`] = `

[Input]
  1 | {"type": "module", "exports": {"types": {"import": null, "default": "./i.d.mts"}, "default": "./i.mjs"}}

`;

exports[`invalid(56): {\"type\": \"module\", \"exports\": {\"types\": {\"import\": null, \"default\": \"./i.d.mts\"}, \"default\": \"./i.mjs\"}} 2`] = `

Message:
> 1 | {"type": "module", "exports": {"types": {"import": null, "default": "./i.d.mts"}, "default": "./i.mjs"}}
    |                                                                                              ^^^^^^^^^ Exported JavaScript target \`./i.mjs\` has no corresponding \`types\` condition.

`;

exports[`invalid(57): {\"exports\": {\"types\": {\"require\": \"./i.d.cts\"}, \"default\": \"./i.cjs\"}} 1`] = `

[Input]
  1 | {"exports": {"types": {"require": "./i.d.cts"}, "default": "./i.cjs"}}

`;

exports[`invalid(57): {\"exports\": {\"types\": {\"require\": \"./i.d.cts\"}, \"default\": \"./i.cjs\"}} 2`] = `

Message:
> 1 | {"exports": {"types": {"require": "./i.d.cts"}, "default": "./i.cjs"}}
    |                                                            ^^^^^^^^^ Exported JavaScript target \`./i.cjs\` has no corresponding \`types\` condition.

`;

exports[`invalid(58): {\"exports\": {\"types\": {\"require\": \"./i.d.cts\", \"import\": null}, \"default\": \"./i.cjs\"}} 1`] = `

[Input]
  1 | {"exports": {"types": {"require": "./i.d.cts", "import": null}, "default": "./i.cjs"}}

`;

exports[`invalid(58): {\"exports\": {\"types\": {\"require\": \"./i.d.cts\", \"import\": null}, \"default\": \"./i.cjs\"}} 2`] = `

Message:
> 1 | {"exports": {"types": {"require": "./i.d.cts", "import": null}, "default": "./i.cjs"}}
    |                                                                            ^^^^^^^^^ Exported JavaScript target \`./i.cjs\` has no corresponding \`types\` condition.

`;

exports[`invalid(59): {\"exports\": {\"types\": {\"import\": null, \"require\": \"./i.d.cts\"}, \"default\": \"./i.cjs\"}} 1`] = `

[Input]
  1 | {"exports": {"types": {"import": null, "require": "./i.d.cts"}, "default": "./i.cjs"}}

`;

exports[`invalid(59): {\"exports\": {\"types\": {\"import\": null, \"require\": \"./i.d.cts\"}, \"default\": \"./i.cjs\"}} 2`] = `

Message:
> 1 | {"exports": {"types": {"import": null, "require": "./i.d.cts"}, "default": "./i.cjs"}}
    |                                                                            ^^^^^^^^^ Exported JavaScript target \`./i.cjs\` has no corresponding \`types\` condition.

`;

exports[`invalid(6): {\"exports\": {\"default\": \"./index.mjs\", \"types@>=5\": \"./index.d.mts\"}} 1`] = `

[Input]
  1 | {"exports": {"default": "./index.mjs", "types@>=5": "./index.d.mts"}}

`;

exports[`invalid(6): {\"exports\": {\"default\": \"./index.mjs\", \"types@>=5\": \"./index.d.mts\"}} 2`] = `

Message:
> 1 | {"exports": {"default": "./index.mjs", "types@>=5": "./index.d.mts"}}
    |                                        ^^^^^^^^^^^ Versioned type conditions must come before \`types\`, and type conditions must come before a \`default\` target and before an \`import\` or \`node\` target.

`;

exports[`invalid(60): {\"type\": \"module\", \"exports\": {\"types\": {\"node\": \"./i.d.mts\"}, \"import\": \"./i.mjs\"}} 1`] = `

[Input]
  1 | {"type": "module", "exports": {"types": {"node": "./i.d.mts"}, "import": "./i.mjs"}}

`;

exports[`invalid(60): {\"type\": \"module\", \"exports\": {\"types\": {\"node\": \"./i.d.mts\"}, \"import\": \"./i.mjs\"}} 2`] = `

Message:
> 1 | {"type": "module", "exports": {"types": {"node": "./i.d.mts"}, "import": "./i.mjs"}}
    |                                                                          ^^^^^^^^^ Exported JavaScript target \`./i.mjs\` has no corresponding \`types\` condition.

`;

exports[`invalid(61): {\"exports\": {\"types\": {\"require\": \"./types/i.d.cts\"}, \"import\": {\"browser\": {\"types\": \"./types/b.d.mts\", \"default\": \"./b.mjs\"}}, \"default\": \"./i.cjs\"}} 1`] = `

[Input]
  1 | {"exports": {"types": {"require": "./types/i.d.cts"}, "import": {"browser": {"types": "./types/b.d.mts", "default": "./b.mjs"}}, "default": "./i.cjs"}}

`;

exports[`invalid(61): {\"exports\": {\"types\": {\"require\": \"./types/i.d.cts\"}, \"import\": {\"browser\": {\"types\": \"./types/b.d.mts\", \"default\": \"./b.mjs\"}}, \"default\": \"./i.cjs\"}} 2`] = `

Message:
> 1 | {"exports": {"types": {"require": "./types/i.d.cts"}, "import": {"browser": {"types": "./types/b.d.mts", "default": "./b.mjs"}}, "default": "./i.cjs"}}
    |                                                                                                                                             ^^^^^^^^^ Exported JavaScript target \`./i.cjs\` has no corresponding \`types\` condition.

`;

exports[`invalid(62): {\"type\": \"module\", \"exports\": {\"import\": \"./lib/index.js\", \"require\": \"./cjs/index.cjs\", \"types\": \"./lib/index.d.ts\"}} 1`] = `

[Input]
  1 | {"type": "module", "exports": {"import": "./lib/index.js", "require": "./cjs/index.cjs", "types": "./lib/index.d.ts"}}

`;

exports[`invalid(62): {\"type\": \"module\", \"exports\": {\"import\": \"./lib/index.js\", \"require\": \"./cjs/index.cjs\", \"types\": \"./lib/index.d.ts\"}} 2`] = `

Message:
> 1 | {"type": "module", "exports": {"import": "./lib/index.js", "require": "./cjs/index.cjs", "types": "./lib/index.d.ts"}}
    |                                                                                          ^^^^^^^ Versioned type conditions must come before \`types\`, and type conditions must come before a \`default\` target and before an \`import\` or \`node\` target.

`;

exports[`invalid(63): {\"exports\": {\".\": {\"types\": \"./dist/index.d.ts\", \"default\": \"./dist/index.js\"}, \"./types/*\": {\"types\": \"./types/*.js\"}}} 1`] = `

[Input]
  1 | {"exports": {".": {"types": "./dist/index.d.ts", "default": "./dist/index.js"}, "./types/*": {"types": "./types/*.js"}}}

`;

exports[`invalid(63): {\"exports\": {\".\": {\"types\": \"./dist/index.d.ts\", \"default\": \"./dist/index.js\"}, \"./types/*\": {\"types\": \"./types/*.js\"}}} 2`] = `

Message:
> 1 | {"exports": {".": {"types": "./dist/index.d.ts", "default": "./dist/index.js"}, "./types/*": {"types": "./types/*.js"}}}
    |                                                                                                        ^^^^^^^^^^^^^^ The \`types\` condition \`./types/*.js\` must point at a declaration file ending in \`.d.ts\`, \`.d.mts\`, or \`.d.cts\`.

`;

exports[`invalid(64): {\"types\": \"./a.d.ts\", \"exports\": {\"import\": \"./i.js\", \"default\": \"./data.json\"}} 1`] = `

[Input]
  1 | {"types": "./a.d.ts", "exports": {"import": "./i.js", "default": "./data.json"}}

`;

exports[`invalid(64): {\"types\": \"./a.d.ts\", \"exports\": {\"import\": \"./i.js\", \"default\": \"./data.json\"}} 2`] = `

Message:
> 1 | {"types": "./a.d.ts", "exports": {"import": "./i.js", "default": "./data.json"}}
    |                                             ^^^^^^^^ Exported JavaScript target \`./i.js\` has no corresponding \`types\` condition.

`;

exports[`invalid(65): {\"exports\": {\"types\": {\"import\": \"./i.css\"}, \"import\": \"./i.js\"}} 1`] = `

[Input]
  1 | {"exports": {"types": {"import": "./i.css"}, "import": "./i.js"}}

`;

exports[`invalid(65): {\"exports\": {\"types\": {\"import\": \"./i.css\"}, \"import\": \"./i.js\"}} 2`] = `

Message:
> 1 | {"exports": {"types": {"import": "./i.css"}, "import": "./i.js"}}
    |                                  ^^^^^^^^^ The \`types\` condition \`./i.css\` must point at a declaration file ending in \`.d.ts\`, \`.d.mts\`, or \`.d.cts\`.

`;

exports[`invalid(65): {\"exports\": {\"types\": {\"import\": \"./i.css\"}, \"import\": \"./i.js\"}} 3`] = `

Message:
> 1 | {"exports": {"types": {"import": "./i.css"}, "import": "./i.js"}}
    |                                                        ^^^^^^^^ Exported JavaScript target \`./i.js\` has no corresponding \`types\` condition.

`;

exports[`invalid(66): {\"typesVersions\": {\"*\": {\"*\": [\"types/*.d.ts\"]}}, \"exports\": {\".\": \"./dist/index.js\"}} 1`] = `

[Input]
  1 | {"typesVersions": {"*": {"*": ["types/*.d.ts"]}}, "exports": {".": "./dist/index.js"}}

`;

exports[`invalid(66): {\"typesVersions\": {\"*\": {\"*\": [\"types/*.d.ts\"]}}, \"exports\": {\".\": \"./dist/index.js\"}} 2`] = `

Message:
> 1 | {"typesVersions": {"*": {"*": ["types/*.d.ts"]}}, "exports": {".": "./dist/index.js"}}
    |                                                                    ^^^^^^^^^^^^^^^^^ Exported JavaScript target \`./dist/index.js\` has no corresponding \`types\` condition.

`;

exports[`invalid(67): {\"exports\": [{\"default\": \"./index.js\"}, {\"types\": \"./index.js\"}]} 1`] = `

[Input]
  1 | {"exports": [{"default": "./index.js"}, {"types": "./index.js"}]}

`;

exports[`invalid(67): {\"exports\": [{\"default\": \"./index.js\"}, {\"types\": \"./index.js\"}]} 2`] = `

Message:
> 1 | {"exports": [{"default": "./index.js"}, {"types": "./index.js"}]}
    |                          ^^^^^^^^^^^^ Exported JavaScript target \`./index.js\` has no corresponding \`types\` condition.

`;

exports[`invalid(67): {\"exports\": [{\"default\": \"./index.js\"}, {\"types\": \"./index.js\"}]} 3`] = `

Message:
> 1 | {"exports": [{"default": "./index.js"}, {"types": "./index.js"}]}
    |                                                   ^^^^^^^^^^^^ The \`types\` condition \`./index.js\` must point at a declaration file ending in \`.d.ts\`, \`.d.mts\`, or \`.d.cts\`.

`;

exports[`invalid(68): {\"exports\": [{\"default\": \"./i.js\"}, {\"default\": \"./i.js\", \"types\": \"./i.d.ts\"}]} 1`] = `

[Input]
  1 | {"exports": [{"default": "./i.js"}, {"default": "./i.js", "types": "./i.d.ts"}]}

`;

exports[`invalid(68): {\"exports\": [{\"default\": \"./i.js\"}, {\"default\": \"./i.js\", \"types\": \"./i.d.ts\"}]} 2`] = `

Message:
> 1 | {"exports": [{"default": "./i.js"}, {"default": "./i.js", "types": "./i.d.ts"}]}
    |                                                           ^^^^^^^ Versioned type conditions must come before \`types\`, and type conditions must come before a \`default\` target and before an \`import\` or \`node\` target.

`;

exports[`invalid(69): {\"exports\": {\"node\": \"./i.js\", \"types\": \"./i.d.ts\", \"default\": \"./i.js\"}} 1`] = `

[Input]
  1 | {"exports": {"node": "./i.js", "types": "./i.d.ts", "default": "./i.js"}}

`;

exports[`invalid(69): {\"exports\": {\"node\": \"./i.js\", \"types\": \"./i.d.ts\", \"default\": \"./i.js\"}} 2`] = `

Message:
> 1 | {"exports": {"node": "./i.js", "types": "./i.d.ts", "default": "./i.js"}}
    |                                ^^^^^^^ Versioned type conditions must come before \`types\`, and type conditions must come before a \`default\` target and before an \`import\` or \`node\` target.

`;

exports[`invalid(7): {\"exports\": {\"types@>=5\": \"./index.d.ts\", \"default\": \"./index.js\", \"types@>=4\": \"./index.d.ts\"}} 1`] = `

[Input]
  1 | {"exports": {"types@>=5": "./index.d.ts", "default": "./index.js", "types@>=4": "./index.d.ts"}}

`;

exports[`invalid(7): {\"exports\": {\"types@>=5\": \"./index.d.ts\", \"default\": \"./index.js\", \"types@>=4\": \"./index.d.ts\"}} 2`] = `

Message:
> 1 | {"exports": {"types@>=5": "./index.d.ts", "default": "./index.js", "types@>=4": "./index.d.ts"}}
    |                                                                    ^^^^^^^^^^^ Versioned type conditions must come before \`types\`, and type conditions must come before a \`default\` target and before an \`import\` or \`node\` target.

`;

exports[`invalid(8): {\"exports\": {\"import\": {\"default\": \"./index.js\", \"types\": \"./index.d.ts\"}}} 1`] = `

[Input]
  1 | {"exports": {"import": {"default": "./index.js", "types": "./index.d.ts"}}}

`;

exports[`invalid(8): {\"exports\": {\"import\": {\"default\": \"./index.js\", \"types\": \"./index.d.ts\"}}} 2`] = `

Message:
> 1 | {"exports": {"import": {"default": "./index.js", "types": "./index.d.ts"}}}
    |                                                  ^^^^^^^ Versioned type conditions must come before \`types\`, and type conditions must come before a \`default\` target and before an \`import\` or \`node\` target.

`;

exports[`invalid(9): {\"exports\": {\"types@invalid\": \"./index.d.ts\", \"default\": \"./index.js\"}} 1`] = `

[Input]
  1 | {"exports": {"types@invalid": "./index.d.ts", "default": "./index.js"}}

`;

exports[`invalid(9): {\"exports\": {\"types@invalid\": \"./index.d.ts\", \"default\": \"./index.js\"}} 2`] = `

Message:
> 1 | {"exports": {"types@invalid": "./index.d.ts", "default": "./index.js"}}
    |              ^^^^^^^^^^^^^^^ Versioned type condition \`types@invalid\` must use TypeScript-compatible semver syntax.

`;

exports[`invalid(9): {\"exports\": {\"types@invalid\": \"./index.d.ts\", \"default\": \"./index.js\"}} 3`] = `

Message:
> 1 | {"exports": {"types@invalid": "./index.d.ts", "default": "./index.js"}}
    |                                                          ^^^^^^^^^^^^ Exported JavaScript target \`./index.js\` has no corresponding \`types\` condition.

`;
